--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -2,7 +2,7 @@
 
 <kt-portlet>
     <kt-portlet-body style="min-height: 79vh;">
-        <div class="row kt-padding-t-20 ">
+        <div class="row kt-padding-t-20 " *ngIf="gold">
             <div class="col-3 font-weight-bold text-color d-flex align-items-center" placeholder="">Upload Gold Rate
             </div>
             <div class="col-3 per-gram d-flex align-items-center">
