--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
@@ -14,4 +14,7 @@
     .mat-column-actions{
         flex:1 !important;
     }
+    .mat-column-customerID{
+        flex: 0 0 10% !important;
+    }
 }
