--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user/add-internal-user/add-internal-user.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user/add-internal-user/add-internal-user.component.html
@@ -55,7 +55,7 @@
                                 <select class="form-control" formControlName="internalBranchId" autocomplete="off"
                                     [class.isError]="controls.internalBranchId.touched && controls.internalBranchId.invalid">
                                     <option value="" [selected]="true" [disabled]="true">Select</option>
-                                    <option [value]="branch.id" *ngFor="let branch of branch">{{branch.name}}</option>
+                                    <option [value]="branch.id" *ngFor="let branch of branch">{{branch.name |titlecase}}</option>
                                 </select>
                                 <mat-error *ngIf="controls.internalBranchId.touched && controls.internalBranchId.errors?.required">
                                     Required field</mat-error>
