--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
@@ -24,7 +24,7 @@
 
         <!-- MATERIAL TABLE | Binded to datasources -->
         <!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
-        <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
+        <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                 matSortActive="id" matSortDirection="asc" matSortDisableClear>
                 <!-- Checkbox Column -->
@@ -47,48 +47,65 @@
 
                 <ng-container matColumnDef="storeId">
                     <mat-header-cell *matHeaderCellDef>Store ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.order?.orderBy?.broker?.store?.storeUniqueId}}</mat-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.order?.orderBy?.broker?.store?.storeUniqueId ? element?.order?.orderBy?.broker?.store?.storeUniqueId : '-'}}
+                    </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="userId">
                     <mat-header-cell *matHeaderCellDef>User ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.order?.customerDetails?.customerUniqueId}}</mat-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.order?.customerDetails?.customerUniqueId ? element?.order?.customerDetails?.customerUniqueId : '-'}}
+                    </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.order?.customerDetails?.mobileNumber}}</mat-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.order?.customerDetails?.mobileNumber ? element?.order?.customerDetails?.mobileNumber : '-'}}
+                    </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="orderId">
                     <mat-header-cell *matHeaderCellDef>Order ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.order?.orderUniqueId}}</mat-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.order?.orderUniqueId ? element?.order?.orderUniqueId : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="emiDate">
                     <mat-header-cell *matHeaderCellDef>EMI Date</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.dueDate}}</mat-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.dueDate ? (element?.dueDate | date : 'medium') : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="emiAmount">
-                    <mat-header-cell *matHeaderCellDef>Emi Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.emiAmount}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef>EMI Amount</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element?.emiAmount ? element?.emiAmount : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="emiPaidDate">
-                    <mat-header-cell *matHeaderCellDef>Emi Paid Date</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.paymentRecievedDate}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef>EMI Paid Date</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.paymentRecievedDate ? (element?.paymentRecievedDate | date : 'medium') : '-'}}
+                    </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.orderemistatus?.statusName}}</mat-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.orderemistatus?.statusName ? element?.orderemistatus?.statusName : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="emiFrom">
-                    <mat-header-cell *matHeaderCellDef>Emi from</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.receivedBy?.firstName}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef>Emi From</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element?.receivedBy?.firstName ? element?.receivedBy?.firstName : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
-                    <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.action}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <div [ngStyle]="{'display': 'inherit'}">
+                            <div (click)="viewOrder(element)" class="kt-pointer"> View | &nbsp;</div>
+                            <div (click)="printCancellationReceipt(element)" class="kt-pointer">Print EMI Receipt</div>
+                        </div>
+                    </mat-cell>
                 </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-header-row *matHeaderRowDef="displayedColumns" style="width: 150%;"></mat-header-row>
 
-                <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns" style="width: 150%;"></mat-row>
             </mat-table>
 
             <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
