--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.scss
@@ -1,7 +1,11 @@
 :host{
+    .mat-table__wrapper {
+        width: 100%;
+        overflow-x: hidden;
+    }
     .mat-column-merchantName{
         flex: 0 0 13% !important;
-        padding-left: 5px !important;
+        padding-left: 10px !important;
     }
     .mat-column-fullName{
         flex: 0 0 12% !important;
@@ -10,7 +14,8 @@
         flex: 0 0 8% !important;
     }
     .mat-column-email{
-        flex: 0 0 15% !important;
+        flex: 0 0 17% !important;
+        word-break: break-all !important;
     }
     .mat-column-state{
         flex: 0 0 10% !important;
@@ -22,10 +27,10 @@
         flex: 0 0 6% !important;
     }
     .mat-column-approvalStatus{
-        flex: 0 0 11% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-apiKey{
-        flex: 0 0 8% !important;
+        flex: 0 0 5% !important;
     }
     .mat-column-action{
         flex: 0 0 8% !important;
