filter and config download

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -126,6 +126,63 @@
           </div>
         </div>
 
+        <!-- EMI Details -->
+        <div class="kt-portlet__body" *ngIf="filterName =='emiDetails'">
+          <div class="kt-form">
+            <form [formGroup]="filterForm">
+              <div class="form-group kt-form__group row">
+                <div class="col-12 kt-margin-bottom-20-mobile">
+                  <div class="row">
+                    <div class="col-3">
+                      <label>By Amount</label>
+                      <input class="form-control" placeholder="eg-100" formControlName="priceFrom" type="number" />
+                    </div>
+                    <div class="col-6">
+                      <label>By Status</label>
+                      <input class="form-control" formControlName="priceTo" type="text" />
+                    </div>
+                    <div class="col-3">
+                      <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
+                        (click)="applyFilter()">
+                      </kt-button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <!-- Order Details -->
+        <div class="kt-portlet__body" *ngIf="filterName =='orderDetails'">
+          <div class="kt-form">
+            <form [formGroup]="filterForm">
+              <div class="form-group kt-form__group row">
+                <div class="col-12 kt-margin-bottom-20-mobile">
+                  <div class="row">
+                    <div class="col-3">
+                      <label>By Weight(gm)</label>
+                      <input class="form-control" placeholder="eg-100" formControlName="priceFrom" type="number" />
+                    </div>
+                    <div class="col-3">
+                      <label>By tenure(m)</label>
+                      <input class="form-control" formControlName="priceTo" type="text" />
+                    </div>
+                    <div class="col-4">
+                        <label>By Status</label>
+                        <input class="form-control" formControlName="priceTo" type="text" />
+                      </div>
+                    <div class="col-2">
+                      <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
+                        (click)="applyFilter()">
+                      </kt-button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
   </div>
